/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package mobileharness.client;

import "google/protobuf/descriptor.proto";
import "src/devtools/mobileharness/api/model/proto/job.proto";
import "src/java/com/google/wireless/qa/mobileharness/shared/proto/job.proto";

option java_package = "com.google.wireless.qa.mobileharness.shared.proto";
option java_multiple_files = true;

// The customized option to add to JobConfig fields.
extend google.protobuf.FieldOptions {
  // To annotate a field could be missing when it's validated.
  optional bool missing_allowed = 405565865 [default = false];
}

// JobConfig contains all necessary settings to initialize mobileharness client.
// All fields must be 'optional'. 'repeated' or 'map' are not permitted.
// Because setting a repeated/map field to empty is different from not setting
// it at all. We need to distinguish them explicitly. By define all fields as
// "optional", we could use method 'hasXxx' to check whether the value is set.
// So we create the substitutions of 'repeated' and 'map':
//    StringMap, StringList and FileConfigList.
// However, in order to make them easier to use, we treat them as 'repeated'
// or 'map' field while we serialize them to a json.
// For example:
//   1) StringList json format:
//      "test": ["a", "b", "c"]"
//
//   2) StringMap json format:
//      "param": {
//        "key1": "value1"
//        "key2": "value2"
//      }
//
//   3) FileConfigList:
//      "files": {
//         "tag1": [ "path1_1", "path1_2"],
//         "tag2": [ "path2_1", "path2_2"]
//      }
// Next tag: 50
message JobConfig {
  // The job name.
  optional string name = 1;

  // The required device type, driver and decorators.
  // It's deprecated. use device, driver and decorators instead.
  // Format: "XxxDevice+XxxDriver+XxxDecorator+YyyDecorator" in which the
  // decorators are in decorating order and in reversed executing order, which
  // means the preRun() of a decorator in the front will be executed AFTER
  // preRun() of other decorators.
  optional string type = 21 [deprecated = true];

  // Required driver in test. See go/mh-tr.
  message Driver {
    // Driver name.
    optional string name = 1;
    // A json string param for driver.
    optional string param = 2;
  }
  optional Driver driver = 38;

  // See go/mh-tr.
  message DecoratorList {
    // Decorators in reversed decorating order and in executing order, which
    // means the preRun() of a decorator in the front will be executed BEFORE
    // preRun() of other decorators.
    repeated Driver content = 1;
  }

  message SubDeviceSpec {
    // Device type name.
    optional string type = 1;
    // A subdevice dimensions specification.
    optional StringMap dimensions = 2;
    // Decorators specific to subdevice.
    optional DecoratorList decorators = 3;
  }

  message DeviceList {
    repeated SubDeviceSpec sub_device_spec = 1;
    // A list of dimensions that must have a common value for all devices.
    repeated string shared_dimension_name = 2 [deprecated = true];
  }

  // Required device in test.
  optional DeviceList device = 42;

  // The parameters used in this job.
  optional StringMap params = 23;

  // The files used in this job.
  optional FileConfigList files = 24;

  // Internal use. Don't set.
  optional bool need_check_built_files = 25;

  // The tests names in this job.
  optional StringList tests = 26;

  // Execution mode.
  optional string exec_mode = 27;

  optional int32 test_timeout_sec = 29;

  // Timeout for staring job.
  optional int64 start_timeout_sec = 30;

  // The maximum number of times a test can attempt.
  optional int32 test_attempts = 31;

  optional mobileharness.api.model.Retry.Level retry_level = 48;
  optional int32 repeat_runs = 49;

  optional mobileharness.shared.Priority priority = 33;

  // The directory to store the test generated files.
  optional string gen_file_dir = 34;

  optional string master_spec = 20;

  optional StringMap target_locations = 35;

  optional StringList spec_files = 36;

  optional string remote_file_dir = 41;

  // The tags will be set in sponge TargetResult
  optional StringList tags = 43;

  optional mobileharness.api.model.AllocationExitStrategy
      allocation_exit_strategy = 44;

  // See go/mh-shared-dimensions
  optional StringList shared_dimension_names = 45;

  // The message passed as macro -> client binary -> job config generator ->
  // job info generator to be recorded for statistics.
  optional StringMap param_stats = 46 [(missing_allowed) = true];

  // Wrapper of a java type Map<string, List<String>>. However, we couldn't use
  // map in protobuf, because we need to keep the order of files.
  // TODO: Define content as a map, because the order of protobuf map is
  // preserved.
  message FileConfigList {
    message FileConfig {
      // The file tag, like "build_apk".
      required string tag = 1;

      // The file path, like /usr/local/temp.apk.
      repeated string path = 2;
    }
    repeated FileConfig content = 1;
  }

  // Wrapper of a string map, to help all fields in JobConfig optional.
  message StringMap {
    map<string, string> content = 1;
  }

  // Wrapper of a string list, to help all fields in JobConfig optional.
  message StringList {
    repeated string content = 1;
  }

  // Deprecated fields. DO NOT use.
  reserved 2 to 15, 17, 18, 19, 22, 32, 37, 40;
}

// A group of JobConfig.
message JobConfigs {
  repeated JobConfig job_config = 1;
}
